<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".DetalhesActivity">

    <TextView
        android:id="@+id/nome_detalhe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/butom"
        android:text="@string/detalhes_nome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/butom"
        android:text="@string/suas_nescessidades_caloricas_s_o"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_detalhe" />

    <TextView
        android:id="@+id/calorias_detalhe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/butom"
        android:text="@string/get_3100_kcal"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/quadro_divisao"
        android:layout_width="0dp"
        android:layout_height="208dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/butom"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorias_detalhe"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/color_text_table_nutrientes"
        android:text="@string/Calorias"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/quadro_divisao"
        app:layout_constraintTop_toTopOf="@+id/quadro_divisao" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/color_text_table_nutrientes"
        android:text="@string/Gramas"
        app:layout_constraintEnd_toEndOf="@+id/quadro_divisao"
        app:layout_constraintTop_toTopOf="@+id/quadro_divisao" />

    <TextView
        android:id="@+id/proteina_gramas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/color_fundo_table"
        android:text="@string/_200g"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/carboidrato_grama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/color_fundo_table"
        android:text="@string/_500g"
        app:layout_constraintEnd_toEndOf="@+id/proteina_gramas"
        app:layout_constraintStart_toStartOf="@+id/proteina_gramas"
        app:layout_constraintTop_toBottomOf="@+id/proteina_gramas" />

    <TextView
        android:id="@+id/gordura_gramas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/color_fundo_table"
        android:text="@string/_300g"
        app:layout_constraintEnd_toEndOf="@+id/carboidrato_grama"
        app:layout_constraintStart_toStartOf="@+id/carboidrato_grama"
        app:layout_constraintTop_toBottomOf="@+id/carboidrato_grama" />

    <TextView
        android:id="@+id/text_Proteina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/color_text_table_nutrientes"
        android:text="@string/proteinas"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/text_carboidrato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/color_text_table_nutrientes"
        android:text="@string/carboidratos"
        app:layout_constraintEnd_toEndOf="@+id/text_Proteina"
        app:layout_constraintStart_toStartOf="@+id/text_Proteina"
        app:layout_constraintTop_toBottomOf="@+id/text_Proteina" />

    <TextView
        android:id="@+id/text_gordura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/color_text_table_nutrientes"
        android:text="@string/gorduras"
        app:layout_constraintEnd_toEndOf="@+id/text_carboidrato"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/text_carboidrato"
        app:layout_constraintTop_toBottomOf="@+id/text_carboidrato" />

    <TextView
        android:id="@+id/proteina_caloria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/color_fundo_table"
        android:text="@string/_500_cal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/carboidrato_caloria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/color_fundo_table"
        android:text="@string/_700_cal"
        app:layout_constraintEnd_toEndOf="@+id/proteina_caloria"
        app:layout_constraintStart_toStartOf="@+id/proteina_caloria"
        app:layout_constraintTop_toBottomOf="@+id/proteina_caloria" />

    <TextView
        android:id="@+id/gordura_caloria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/color_fundo_table"
        android:text="@string/_800_cal"
        app:layout_constraintEnd_toEndOf="@+id/carboidrato_caloria"
        app:layout_constraintStart_toStartOf="@+id/carboidrato_caloria"
        app:layout_constraintTop_toBottomOf="@+id/carboidrato_caloria" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/color_text_table_nutrientes"
        android:text="@string/macronutrientes"
        app:layout_constraintBottom_toTopOf="@+id/text_Proteina"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/quadro_divisao"
        app:layout_constraintTop_toTopOf="@+id/quadro_divisao" />

</android.support.constraint.ConstraintLayout>